Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4923

Cannot edit the photoviewer example in Qt Quick Designer

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 2.3.0
    • Qt Creator 2.3.0
    • Quick Designer
    • None
    • Windows 7
    • 8a04f4a67d5ffd34720776dccb09496f150dd7b5

    Description

      When you try to open photoviewer.qml in Qt Quick Designer (Design mode) for editing, the following error message appears: Qt Quick emulation layer crashed (1:0).

      The Go to Error link closes the editor.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              thohartm Thomas Hartmann
              leenam Leena Miettinen
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes