QmlDesigner.rewriter: crashfix

Task-number: QTCREATORBUG-4923

The photoviewer example crashed. This is a workaround so
a Component defined inside a file is not turned into
an implicit component.

Change-Id: Ia071be96bac7a735beecfa82cbedae3a04a31bc3
Reviewed-on: http://codereview.qt.nokia.com/134
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@nokia.com>